--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ misc/weiboClient/.tags
 misc/weiboClient/.tags_sorted_by_file
 
 misc/weiboClient/comments.txt
+
+misc/weiboOfficial/.tags
+
+misc/weiboOfficial/.tags_sorted_by_file
