--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ misc/weiboOfficial/.tags
 misc/weiboOfficial/.tags_sorted_by_file
 
 misc/weiboOfficial/data.txt
+
+misc/weiboOfficial/comments.txt
